2008-06-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Applied patch from bug #1985214 from Matthias Kraft
	 to fix bugs in the /whisper and /back commands.

2008-05-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Source plugins from ~/.tkchat_plugins or from any
	directory listed in TKCHAT_PLUGINS environment variable.

2008-05-08  Elchonon Edelson  <eee@users.sourceforge.net>

	* tkchat.tcl: Added bindings to .eMsg and .tMsg message entry
	widgets to toggle what's under the cursor between being a
	character or its unicode value.
	* tkchat.tcl: Remember whether chat window was maximized, restore
	that on start.
	* tkchat.tcl: Fixed a case where the saved nickname could be lost.
	
2008-05-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added a Lurk/Unlurk context menu on the entry widget

2008-04-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added Shift-Key-Up/Down bindings to the entry to
	scroll the chat widget. Added an option to toggle focus mode for
	the chat widget - either it accepts focus, or focus always goes to
	the entry widget. Default is focus on entry widget.

2008-04-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Proper quoting when cloning text widget data. We
	must use [list]/[lappend] to serialize the data else rogue braces
	can break the de-serialization.

2008-04-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:       Applied patch #1935658 from Sergei Gavrikov to
	* tkchat_clock.tcl: restrict the selected font to displayed text.

2008-04-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fix configure options when not using ttk in the
	options dialog and added a 'i hate lolcatz' option.

2008-03-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (::tkchat::getColor): If someone selects our
	background colour to post with then we will invert them.

2008-03-02  Pat Thoyts  <patthoyts@users.sourceforge.net>
